:mobile_phone: feat: Add responsividade

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="flex column align-center">
       <div class="logo"></div>
       <hr />
-      <nav class="globo-product-container flex align-center">
+      <nav class="globo-product-container flex align-center mobile-width-full">
         <ul class="globo-product-menu flex justify-between">
           <li class="globo-product"></li>
           <li class="globo-product"></li>
@@ -42,7 +42,9 @@
       </nav>
       <hr />
     </header>
-    <main class="flex gap-16 justify-between">
+    <main
+      class="flex gap-16 justify-between mobile-flex-column mobile-width-full"
+    >
       <section class="container-news flex column gap-16">
         <h2 class="breaking-news">
           Lorem ipsum dolor sit amet consectetur adipisicing elit
@@ -50,123 +52,165 @@
         <h3 class="headlines-news">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel
         </h3>
-        <h3 class="headlines-news">
+        <h3 class="headlines-news desktop">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel
         </h3>
         <span class="horizontal-splitter"></span>
-        <div class="flex gap-16">
+        <div class="flex gap-16 mobile-flex-column">
           <article class="highlight-news flex column gap-8">
-            <img
-              class="img-size-small"
-              src="./assets/images/icon/image-icon.png"
-              alt=""
-            />
-            <h4>Lorem ipsum dolor</h4>
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <div class="flex column gap-8 mobile-flex-row">
+              <img
+                class="img-size-small mobile-img-size"
+                src="./assets/images/icon/image-icon.png"
+                alt=""
+              />
+              <h4 class="desktop">Lorem ipsum dolor</h4>
+              <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
           </article>
+          <span class="horizontal-splitter mobile"></span>
           <article class="highlight-news flex column gap-8">
-            <img
-              class="img-size-small"
-              src="./assets/images/icon/image-icon.png"
-              alt=""
-            />
-            <h4>Lorem ipsum dolor</h4>
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <div class="flex column gap-8 mobile-flex-row">
+              <img
+                class="img-size-small mobile-img-size"
+                src="./assets/images/icon/image-icon.png"
+                alt=""
+              />
+              <h4 class="desktop">Lorem ipsum dolor</h4>
+              <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
           </article>
+          <span class="horizontal-splitter mobile"></span>
           <article class="highlight-news flex column gap-8">
-            <img
-              class="img-size-small"
-              src="./assets/images/icon/image-icon.png"
-              alt=""
-            />
-            <h4>Lorem ipsum dolor</h4>
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <div class="flex column gap-8 mobile-flex-row">
+              <img
+                class="img-size-small mobile-img-size"
+                src="./assets/images/icon/image-icon.png"
+                alt=""
+              />
+              <h4 class="desktop">Lorem ipsum dolor</h4>
+              <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
           </article>
         </div>
         <span class="horizontal-splitter"></span>
-        <div class="flex gap-16">
+        <div class="flex gap-16 mobile-flex-column">
           <article class="today-news flex column gap-8">
-            <h4>Lorem ipsum dolor</h4>
+            <h4 class="desktop">Lorem ipsum dolor</h4>
             <h3>Lorem ipsum dolor sit amet consectetur</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
           </article>
+          <span class="horizontal-splitter mobile"></span>
           <article class="today-news flex column gap-8">
-            <h4>Lorem ipsum dolor</h4>
+            <h4 class="desktop">Lorem ipsum dolor</h4>
             <h3>Lorem ipsum dolor sit amet consectetur</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
           </article>
+          <span class="horizontal-splitter mobile"></span>
           <article class="today-news flex column gap-8">
-            <h4>Lorem ipsum dolor</h4>
+            <h4 class="desktop">Lorem ipsum dolor</h4>
             <h3>Lorem ipsum dolor sit amet consectetur</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
           </article>
+          <span class="horizontal-splitter mobile"></span>
         </div>
       </section>
-      <section class="container-news flex gap-16 justify-between">
-        <span class="vertical-splitter"></span>
-        <div class="column-news flex column justify-between">
+      <section
+        class="container-news flex gap-16 justify-between mobile-flex-column"
+      >
+        <span class="vertical-splitter desktop"></span>
+        <div class="column-news flex column gap-16 justify-between mobile-width-full">
           <article class="sports-news flex column gap-8">
-            <img
-              class="img-size-regular"
-              src="./assets/images/icon/image-icon.png"
-              alt=""
-            />
-            <h4>Lorem ipsum dolor</h4>
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <div class="flex column gap-8 mobile-flex-row">
+              <img
+                class="img-size-small mobile-img-size"
+                src="./assets/images/icon/image-icon.png"
+                alt=""
+              />
+              <h4 class="desktop">Lorem ipsum dolor</h4>
+              <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
           </article>
+          <span class="horizontal-splitter mobile"></span>
           <article class="sports-news flex column gap-8">
-            <img
-              class="img-size-regular"
-              src="./assets/images/icon/image-icon.png"
-              alt=""
-            />
-            <h4>Lorem ipsum dolor</h4>
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <div class="flex column gap-8 mobile-flex-row">
+              <img
+                class="img-size-small mobile-img-size"
+                src="./assets/images/icon/image-icon.png"
+                alt=""
+              />
+              <h4 class="desktop">Lorem ipsum dolor</h4>
+              <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
           </article>
+          <span class="horizontal-splitter mobile"></span>
           <article class="sports-news flex column gap-8">
-            <img
-              class="img-size-regular"
-              src="./assets/images/icon/image-icon.png"
-              alt=""
-            />
-            <h4>Lorem ipsum dolor</h4>
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <div class="flex column gap-8 mobile-flex-row">
+              <img
+                class="img-size-small desktop"
+                src="./assets/images/icon/image-icon.png"
+                alt=""
+              />
+              <h4 class="desktop">Lorem ipsum dolor</h4>
+              <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <p class="mobile">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit
+            </p>
           </article>
+          <span class="horizontal-splitter mobile"></span>
         </div>
-        <span class="vertical-splitter"></span>
-        <div class="column-news flex column justify-between">
+        <span class="vertical-splitter desktop"></span>
+        <div
+          class="column-news flex column gap-16 justify-between mobile-width-full"
+        >
           <article class="globo-news flex column gap-8">
-            <img
-              class="img-size-regular"
-              src="./assets/images/icon/image-icon.png"
-              alt=""
-            />
-            <h4>Lorem ipsum dolor</h4>
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <div class="flex column gap-8 mobile-flex-row">
+              <img
+                class="img-size-small mobile-img-size"
+                src="./assets/images/icon/image-icon.png"
+                alt=""
+              />
+              <h4 class="desktop">Lorem ipsum dolor</h4>
+              <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <p class="mobile">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit
+            </p>
+            <p class="mobile">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit
+            </p>
           </article>
           <article class="globo-news flex column gap-8">
-            <img
-              class="img-size-regular"
-              src="./assets/images/icon/image-icon.png"
-              alt=""
-            />
-            <h4>Lorem ipsum dolor</h4>
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <div class="flex column gap-8 mobile-flex-row">
+              <img
+                class="img-size-small desktop"
+                src="./assets/images/icon/image-icon.png"
+                alt=""
+              />
+              <h4 class="desktop">Lorem ipsum dolor</h4>
+              <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
           </article>
           <article class="globo-news flex column gap-8">
-            <img
-              class="img-size-regular"
-              src="./assets/images/icon/image-icon.png"
-              alt=""
-            />
-            <h4>Lorem ipsum dolor</h4>
-            <h3>Lorem ipsum dolor sit amet consectetur</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
+            <div class="flex column gap-8 mobile-flex-row">
+              <img
+                class="img-size-small mobile-img-size"
+                src="./assets/images/icon/image-icon.png"
+                alt=""
+              />
+              <h4 class="desktop">Lorem ipsum dolor</h4>
+              <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <p class="desktop">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit
+            </p>
           </article>
         </div>
       </section>
