:lipstick: style: remove quebra de linha desnecessária

--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
         class="container-news flex gap-16 justify-between mobile-flex-column"
       >
         <span class="vertical-splitter desktop"></span>
-        <div class="column-news flex column gap-16 justify-between mobile-width-full">
+        <div
+          class="column-news flex column gap-16 justify-between mobile-width-full"
+        >
           <article class="sports-news flex column gap-8">
             <div class="flex column gap-8 mobile-flex-row">
               <img
