:lipstick: feat: Add separadores entre as noticias da globo

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
               Lorem ipsum dolor sit amet consectetur, adipisicing elit
             </p>
           </article>
+          <span class="horizontal-splitter mobile"></span>
           <article class="globo-news flex column gap-8">
             <div class="flex column gap-8 mobile-flex-row">
               <img
@@ -200,6 +201,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit</p>
           </article>
+          <span class="horizontal-splitter mobile"></span>
           <article class="globo-news flex column gap-8">
             <div class="flex column gap-8 mobile-flex-row">
               <img
