:sparkles: feat: Adiciona logo responsiva

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
         class="logo-desktop"
         src="./assets/images/logo/desktop.svg"
         alt="Logo Globo.com"
+        width="172"
+        height="36"
+      />
+      <img
+        class="logo-mobile"
+        src="./assets/images/logo/mobile.svg"
+        alt="Logo Globo.com"
+        width="200"
+        height="56"
       />
       <nav>Menu</nav>
     </header>
