--- a/index.html
+++ b/index.html
@@ -38,7 +38,27 @@
         width="200"
         height="56"
       />
-      <nav>Menu</nav>
+      <nav>
+        <ul class="menu-desktop">
+          <li><a href="#" style="color: #C3170C;">g1</a></li>
+          <li><a href="#" style="color: #1E4B9B;">o globo</a></li>
+          <li><a href="#" style="color: #006766;">valor</a></li>
+          <li><a href="#" style="color: #07AA47;">ge</a></li>
+          <li><a href="#" style="color: #E3662B;">cartola</a></li>
+          <li><a href="#" style="color: #FB0735;">globoplay</a></li>
+          <li><a href="#" style="color: #FF75BB;">dropz</a></li>
+          <li><a href="#" style="color: #EC7D00;">gshow</a></li>
+          <li><a href="#" style="color: #323333;">quem</a></li>
+          <li><a href="#" style="color: #A81D83;">receitas</a></li>
+        </ul>
+        <ul class="menu-mobile">
+          <li><a href="#" style="color: #A80001;">g1</a></li>
+          <li><a href="#" style="color: #06AA48;">ge</a></li>
+          <li><a href="#" style="color: #FF7F00;">gshow</a></li>
+          <li><a href="#" style="color: #666;">tech</a></li>
+          <li><a href="#" style="color: #0769DE;">vídeos</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section class="main-news">Main News</section>
