:sparkles: feat: Adiciona as noticias principais

--- a/index.html
+++ b/index.html
@@ -95,9 +95,111 @@
           </article>
         </a>
         <hr />
+        <div class="news-container top-news">
+          <a href="#" target="_blank">
+            <article class="news">
+              <img
+                src="./assets/images/news/alem-do-presidente.jpeg"
+                alt="Imagem da notícia"
+                width="100%"
+              />
+              <h3 class="news-subject display-desktop">Além do presidente</h3>
+              <h2 class="news-title">
+                CPI deve pedir indiciamento de filhos de Bolsonaro
+              </h2>
+              <h2 class="news-subtitle">
+                A evangélicos, Bolsonaro diz ‘chorar sozinho em casa’
+              </h2>
+            </article>
+            <hr class="display-mobile" />
+          </a>
+          <a href="#" target="_blank">
+            <article class="news">
+              <img
+                src="./assets/images/news/crimes-na-fronteira.jpeg"
+                alt="Imagem da notícia"
+                width="100%"
+              />
+              <h3 class="news-subject display-desktop">Crimes na fronteira</h3>
+              <h2 class="news-title">
+                Triângulo amoroso vira chave em linha de investigação
+              </h2>
+              <h2 class="news-subtitle">
+                1ª de 7 mortes entre Brasil e Paraguai faz 1 semana
+              </h2>
+            </article>
+            <hr class="display-mobile" />
+          </a>
+          <a href="#" target="_blank">
+            <article class="news">
+              <img
+                src="./assets/images/news/reino-unido.jpeg"
+                alt="Imagem da notícia"
+                width="100%"
+              />
+              <h3 class="news-subject display-desktop">Reino Unido</h3>
+              <h2 class="news-title">
+                Parlamentar inglês é esfaqueado e morto em igreja
+              </h2>
+              <h2 class="news-subtitle">
+                Homem de 25 anos foi preso no local, diz polícia
+              </h2>
+            </article>
+          </a>
+        </div>
+        <hr />
+        <div class="news-container top-news">
+          <a href="#" target="_blank">
+            <article class="news">
+              <h3 class="news-subject display-desktop">Sabatina de Mendonça</h3>
+              <h2 class="news-title">
+                PGR é consultada sobre investigação contra Alcolumbre
+              </h2>
+              <h2 class="news-subtitle">
+                Aliados dizem que situação de Alcolumbre ‘está feia’
+              </h2>
+            </article>
+            <hr class="display-mobile" />
+          </a>
+          <a href="#" target="_blank">
+            <article class="news">
+              <h3 class="news-subject display-desktop">Negócio de R$ 5,2 bi</h3>
+              <h2 class="news-title">
+                Pão de Açúcar vende 71 pontos do Extra para o Assaí
+              </h2>
+              <h2 class="news-subtitle">
+                Lembre fusões e aquisições bilionárias recentes no país
+              </h2>
+            </article>
+            <hr class="display-mobile" />
+          </a>
+          <a href="#" target="_blank">
+            <article class="news">
+              <h3 class="news-subject display-desktop">
+                Elo com caminhoneiros
+              </h3>
+              <h2 class="news-title">
+                Podcast: ministro liga empresários a atos de 7/9; ouça
+              </h2>
+              <h2 class="news-subtitle">
+                Neto de Jango critica veto de Bolsonaro a tributo
+              </h2>
+            </article>
+            <hr class="display-mobile" />
+          </a>
+        </div>
       </section>
       <section class="sport-news">Sport News</section>
       <section class="globo-news">Globo News</section>
+      <footer>
+        <a
+          href="https://github.com/carneiromatheus/projeto1-globo.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          ©Clone Globo.com @Driven-T11 | Matheus Carneiro
+        </a>
+      </footer>
     </main>
   </body>
 </html>
