:sparkles: feat: Adiciona as noticias de esportes

--- a/index.html
+++ b/index.html
@@ -189,7 +189,51 @@
           </a>
         </div>
       </section>
-      <section class="sport-news">Sport News</section>
+      <section class="sport-news">
+        <article class="news">
+          <img
+            src="./assets/images/news/espiao-estatistico.jpeg"
+            alt="Imagem da notícia"
+            width="100%"
+          />
+          <h3 class="news-subject display-desktop">Espião estatístico</h3>
+          <h2 class="news-title">
+            Classificação do returno tem Palmeiras em último; veja as posições
+          </h2>
+          <h2 class="news-subtitle">
+            Crespo almoça com diretoria e deve se despedir no CT
+          </h2>
+        </article>
+        <hr class="display-mobile" />
+        <article class="news">
+          <img
+            src="./assets/images/news/greve-segue-na-raposa.jpeg"
+            alt="Imagem da notícia"
+            width="100%"
+          />
+          <h3 class="news-subject display-desktop">Greve segue na Raposa</h3>
+          <h2 class="news-title">
+            Cruzeiro não viabiliza recurso para quitar atrasados
+          </h2>
+        </article>
+        <hr class="display-mobile" />
+        <article class="news">
+          <img
+            class="display-desktop"
+            src="./assets/images/news/campeonato-frances.jpeg"
+            alt="Imagem da notícia"
+            width="100%"
+          />
+          <h3 class="news-subject display-desktop">Campeonato francês</h3>
+          <h2 class="news-title">
+            Desfalcado, PSG recebe o Angers, 4º colocado
+          </h2>
+          <h2 class="news-subtitle display-mobile">
+            O campeão da frança será decidido somente na última rodada
+          </h2>
+        </article>
+        <hr class="display-mobile" />
+      </section>
       <section class="globo-news">Globo News</section>
       <footer>
         <a
