:sparkles: feat: Adiciona noticias da Globo

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <a href="#" target="_blank">
             <article class="news">
               <h3 class="news-subject display-desktop">Sabatina de Mendonça</h3>
-              <h2 class="news-title">
+              <h2 class="news-title" style="flex-basis: 100%">
                 PGR é consultada sobre investigação contra Alcolumbre
               </h2>
               <h2 class="news-subtitle">
@@ -164,7 +164,7 @@
           <a href="#" target="_blank">
             <article class="news">
               <h3 class="news-subject display-desktop">Negócio de R$ 5,2 bi</h3>
-              <h2 class="news-title">
+              <h2 class="news-title" style="flex-basis: 100%">
                 Pão de Açúcar vende 71 pontos do Extra para o Assaí
               </h2>
               <h2 class="news-subtitle">
@@ -178,7 +178,7 @@
               <h3 class="news-subject display-desktop">
                 Elo com caminhoneiros
               </h3>
-              <h2 class="news-title">
+              <h2 class="news-title" style="flex-basis: 100%">
                 Podcast: ministro liga empresários a atos de 7/9; ouça
               </h2>
               <h2 class="news-subtitle">
@@ -188,6 +188,7 @@
             <hr class="display-mobile" />
           </a>
         </div>
+        <hr class="display-tablet" />
       </section>
       <section class="sport-news">
         <article class="news">
@@ -234,7 +235,63 @@
         </article>
         <hr class="display-mobile" />
       </section>
-      <section class="globo-news">Globo News</section>
+      <section class="globo-news">
+        <article class="news">
+          <img
+            src="./assets/images/news/ferias-e-jh.jpeg"
+            alt="Imagem da notícia"
+            width="100%"
+          />
+          <h3 class="news-subject display-desktop">Férias e JH</h3>
+          <h2 class="news-title">
+            César Tralli se emociona na despedida do SP1
+          </h2>
+          <h2 class="news-subtitle display-mobile" style="flex-basis: 100%">
+            Confira as homenagens feita pelos seus colegas
+          </h2>
+          <h2
+            class="news-subtitle display-mobile"
+            style="margin-top: 0.8rem; flex-basis: 100%"
+          >
+            Saiba quem irá substituir Tralli
+          </h2>
+        </article>
+        <hr class="display-mobile" />
+        <article class="news">
+          <img
+            class="display-desktop"
+            src="./assets/images/news/verdades-secretas-2.jpeg"
+            alt="Imagem da notícia"
+            width="100%"
+          />
+          <h3 class="news-subject display-desktop">Verdades Secretas 2</h3>
+          <h2 class="news-title">
+            Angel cruza a passarela poderosa; reveja desfiles
+          </h2>
+          <h2 class="news-subtitle" style="flex-basis: 100%">
+            Blanche terá dois relacionamentos
+          </h2>
+          <h2
+            class="news-subtitle"
+            style="margin-top: 0.8rem; flex-basis: 100%"
+          >
+            Gabriel viverá sadomasoquista
+          </h2>
+        </article>
+        <hr class="display-mobile" />
+        <article class="news">
+          <img
+            src="./assets/images/news/nos-tempos-do-imperador.jpeg"
+            alt="Imagem da notícia"
+            width="100%"
+          />
+          <h3 class="news-subject display-desktop">Nos Tempos do Imperador</h3>
+          <h2 class="news-title">Lota vai cair em golpe</h2>
+          <h2 class="news-subtitle display-desktop">
+            Teresa toma decisão radical
+          </h2>
+        </article>
+      </section>
       <footer>
         <a
           href="https://github.com/carneiromatheus/projeto1-globo.com/"
